test/errors/indexed_offsets_error/zs/bitwise_xor_operator_in_array_expression_error.zs
package bitwise_xor_operator_in_array_expression_error;

struct BitwiseXorOperatorInArrayExpressionError
{
    uint32 offsets[];
offsets[@index ^ 0xff]:
    string fields[];
};
